--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,18 +7,17 @@ on:
     branches: [ "main" ]
    schedule:
     - cron: "15 6 * * sun"   # <=== Every sunday at 6:15 UTC
-workflow_dispatch:
-
+   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
-steps:
-  - run: |
-          echo "🎉 The job was triggered by event: ${{ github.event_name }}"
-          echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ."
+    steps:
+     - run: |
+          echo "The job was triggered by event: ${{ github.event_name }}"
+          echo "The name of your branch is ${{ github.ref }} and your repository is ."
           - uses: actions/checkout@v3.3.0
 
-  - name: List files in the repository
-        run: |
+     - name: List files in the repository
+       run: |
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
