--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -33,7 +33,7 @@ jobs:
     needs: Build
     environment: Test
     steps:
-      - run: echo "🧪 Testing..."
+      - run: echo " Testing..."
 
   Load-Test:
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
     environment: Load-Test
     steps:
       - run: |
-          echo "🧪 Testing..."
+          echo " Testing..."
           sleep 15
 
   Production:
